fix(VAlert): apply correct background and radius to pseudo element

--- a/packages/vuetify/src/components/VAlert/VAlert.sass
+++ b/packages/vuetify/src/components/VAlert/VAlert.sass
@@ -63,8 +63,8 @@
       position: absolute
       width: 16px
       height: 16px
-      background: white
-      border-radius: inherit
+      background: $alert-tip-before-background
+      border-radius: 50%
 
     .v-avatar
       height: auto
