--- a/packages/vuetify/src/components/VAlert/_variables.scss
+++ b/packages/vuetify/src/components/VAlert/_variables.scss
@@ -31,6 +31,7 @@ $alert-prominent-avatar-margin-inline-start: 0 !default;
 $alert-prominent-icon-font-size: 40px !default;
 $alert-prominent-icon-size: 40px !default;
 $alert-text-padding: 16px !default;
+$alert-tip-before-background: rgb(var(--v-theme-on-surface)) !default;
 $alert-tip-border-inline-start-width: 6px !default;
 $alert-tip-margin-inline-start: -33px !default;
 $alert-tip-max-height: 24px !default;
