feat(VTextarea): port to v3 (#14175)
fixes #5314
fixes #6995
resolves #10009

Co-authored-by: Kael <kaelwd@gmail.com>

--- a/packages/vuetify/src/components/VField/VField.sass
+++ b/packages/vuetify/src/components/VField/VField.sass
@@ -203,7 +203,12 @@
 
     .v-field--variant-contained &,
     .v-field--variant-filled &
-      transform: translateY(calc(var(--v-input-control-height) / 56 * -12))
+      $root: &
+
+      @at-root
+        @include tools.density('v-input', $input-density) using ($modifier)
+          @at-root #{selector.append(&, $root)}
+            top: 7px + $modifier * .25
 
     .v-field--variant-plain &,
     .v-field--variant-underlined &
