--- a/packages/vuetify/src/components/VTextarea/_variables.scss
+++ b/packages/vuetify/src/components/VTextarea/_variables.scss
@@ -1,4 +1,4 @@
-@import '../../styles/styles.sass';
+@use '../../styles/settings';
 
 $textarea-box-enclosed-prefix-margin-top: 24px !default;
 $textarea-box-enclosed-single-outlined-label-top: 18px !default;
@@ -7,9 +7,7 @@ $textarea-dense-box-enclosed-single-outlined-margin-top: 6px !default;
 $textarea-dense-append-prepend-margin-top: 8px !default;
 $textarea-enclosed-text-slot-margin: -12px !default;
 $textarea-enclosed-text-slot-padding: 12px !default;
-$textarea-line-height: 1.75rem !default;
-$textarea-min-height: 32px !default;
-$textarea-padding: 0 !default;
+$textarea-line-height: 1.75 !default;
 $textarea-prefix-padding-top: 2px !default;
 $textarea-solo-append-padding: 12px !default;
 $textarea-solo-append-prepend-margin-top: 12px !default;
