--- a/packages/vuetify/src/components/VOtpInput/_variables.scss
+++ b/packages/vuetify/src/components/VOtpInput/_variables.scss
@@ -1,6 +1,4 @@
 @import '../../styles/styles.sass';
 
-$otp-row-container-margin-x: -4px !default;
-$otp-col-flex-grow: 1 !default;
-$otp-col-width: 100% !default;
-$otp-col-padding: 4px !default;
+$otp-gutter: 4px !default;
+$otp-width: 24px !default;
