--- a/packages/vuetify/src/components/VBtn/VBtn.sass
+++ b/packages/vuetify/src/components/VBtn/VBtn.sass
@@ -70,6 +70,9 @@
     &:active
       +tools.elevation(map.get($button-elevation, 'active'))
 
+  &--flat
+    box-shadow: none
+
   &--block
     display: flex
     flex: 1 0 auto
