fix(VImg): remove content rule from non-pseudo elements
fixes #14427

--- a/packages/vuetify/src/components/VBtn/VBtn.sass
+++ b/packages/vuetify/src/components/VBtn/VBtn.sass
@@ -37,7 +37,7 @@
 
   @supports selector(:focus-visible)
     &::after
-      @include tools.absolute()
+      @include tools.absolute(true)
       pointer-events: none
       border: 2px solid currentColor
       border-radius: inherit
