--- a/packages/vuetify/src/components/VCheckbox/VCheckbox.sass
+++ b/packages/vuetify/src/components/VCheckbox/VCheckbox.sass
@@ -26,7 +26,7 @@
     cursor: pointer
 
   &::before
-    @include tools.absolute()
+    @include tools.absolute(true)
     border-radius: 100%
     background-color: currentColor
     opacity: 0
