--- a/packages/vuetify/src/components/VMenu/VMenu.sass
+++ b/packages/vuetify/src/components/VMenu/VMenu.sass
@@ -20,5 +20,5 @@
       &::before
         border-radius: inherit
         z-index: -1
-        @include tools.absolute
+        @include tools.absolute(true)
         @include tools.elevation($menu-elevation)
