--- a/packages/vuetify/src/components/VLabel/VLabel.sass
+++ b/packages/vuetify/src/components/VLabel/VLabel.sass
@@ -1,14 +1,22 @@
-@import './_variables.scss'
-
-// Theme
-+theme(v-label) using ($material)
-  color: map-deep-get($material, 'text', 'secondary')
-
-  &--is-disabled
-    color: map-deep-get($material, 'text', 'disabled')
+@forward './variables'
+@use '../../styles/settings'
+@use '../../styles/tools'
+@use './variables' as *
 
 .v-label
+  align-items: center
+  color: $label-color
+  cursor: pointer
+  display: $label-display
   font-size: $label-font-size
-  line-height: $label-line-height
-  min-height: $label-min-height
-  transition: .3s map-get($transition, 'swing')
+  letter-spacing: $label-letter-spacing
+  min-width: 0
+  overflow: hidden
+  text-overflow: ellipsis
+  white-space: nowrap
+
+  &--disabled
+    color: $label-disabled-color
+
+  &--error
+    color: $label-error-color
