--- a/packages/vuetify/src/components/VRadio/VRadio.sass
+++ b/packages/vuetify/src/components/VRadio/VRadio.sass
@@ -1,9 +1,7 @@
 @forward './variables'
-@use 'sass:map'
 @use '../../styles/settings'
 @use '../../styles/tools'
 @use './variables' as *
 
-.v-checkbox
-  .v-selection-control
-    height: var(--v-input-control-height)
+.v-radio
+  //
