--- a/packages/vuetify/src/components/VSelectionControlGroup/VSelectionControlGroup.sass
+++ b/packages/vuetify/src/components/VSelectionControlGroup/VSelectionControlGroup.sass
@@ -1,9 +1,9 @@
 @forward './variables'
 @use 'sass:map'
+@use 'sass:list'
 @use '../../styles/settings'
 @use '../../styles/tools'
 @use './variables' as *
 
-.v-checkbox
-  .v-selection-control
-    height: var(--v-input-control-height)
+.v-selection-control-group
+  grid-area: control
