--- a/packages/vuetify/src/components/VField/_variables.scss
+++ b/packages/vuetify/src/components/VField/_variables.scss
@@ -2,7 +2,7 @@
 
 // INPUT
 $field-border-radius: settings.$border-radius-root !default;
-$field-color: rgba(var(--v-theme-on-surface), .56) !default;
+$field-color: rgba(var(--v-theme-on-surface), var(--v-medium-emphasis-opacity)) !default;
 $field-disabled-color: rgba(var(--v-theme-on-surface), var(--v-disabled-opacity)) !default;
 $field-error-color: rgb(var(--v-theme-error)) !default;
 $field-font-size: 16px !default;
@@ -27,7 +27,6 @@ $field-input-padding-top: 30px !default;
 $field-input-opacity: var(--v-high-emphasis-opacity) !default;
 
 // LABEL
-$field-label-font-size: 1rem !default;
 $field-label-floating-scale: .75 !default;
 
 // OUTLINE
