--- a/packages/vuetify/src/components/VLabel/_variables.scss
+++ b/packages/vuetify/src/components/VLabel/_variables.scss
@@ -1,5 +1,8 @@
-@import '../../styles/styles.sass';
+@use '../../styles/settings';
 
-$label-font-size: 16px !default;
-$label-line-height: 1 !default;
-$label-min-height: 8px !default;
+$label-color: rgba(var(--v-theme-on-surface), var(--v-medium-emphasis-opacity)) !default;
+$label-disabled-color: rgba(var(--v-theme-on-surface), var(--v-disabled-opacity)) !default;
+$label-display: inline-flex !default;
+$label-error-color: rgb(var(--v-theme-error)) !default;
+$label-font-size: 1rem !default;
+$label-letter-spacing: .009375em !default;
