feat(VSwitch): add loading/loader slot support

--- a/packages/vuetify/src/components/VSwitch/VSwitch.sass
+++ b/packages/vuetify/src/components/VSwitch/VSwitch.sass
@@ -8,6 +8,9 @@
   .v-label
     padding-inline-start: $switch-label-margin-inline-start
 
+.v-switch__loader
+  display: flex
+
 .v-switch__track,
 .v-switch__thumb
   background-color: currentColor
