--- a/packages/vuetify/src/components/VSwitch/VSwitch.sass
+++ b/packages/vuetify/src/components/VSwitch/VSwitch.sass
@@ -26,6 +26,11 @@
   width: $switch-track-width
   cursor: pointer
 
+  .v-switch--inset &
+    border-radius: $switch-inset-track-border-radius
+    height: $switch-inset-track-height
+    width: $switch-inset-track-width
+
 .v-switch__thumb
   align-items: center
   border-radius: $switch-thumb-radius
@@ -39,11 +44,17 @@
 
   @include tools.elevation($switch-thumb-elevation)
 
+  .v-switch--inset &
+    @include tools.elevation(0)
+
 .v-switch
   $switch-thumb-transform: $switch-track-width * .5 - $switch-thumb-width * .5 + $switch-thumb-offset
 
   .v-selection-control
     height: var(--v-input-control-height)
+
+  .v-selection-control__wrapper
+    width: auto
 
   .v-selection-control__input
     border-radius: 50%
