fix(VExpansionPanelTitle): use correct border-radius

--- a/packages/vuetify/src/components/VExpansionPanel/VExpansionPanel.sass
+++ b/packages/vuetify/src/components/VExpansionPanel/VExpansionPanel.sass
@@ -101,7 +101,9 @@
         opacity: 0
 
     > .v-expansion-panel-title
-         min-height: $expansion-panel-active-title-min-height
+      border-bottom-left-radius: 0
+      border-bottom-right-radius: 0
+      min-height: $expansion-panel-active-title-min-height
 
 .v-expansion-panel__shadow
   @include tools.absolute()
