fix(VList): add missing default theme background color

--- a/packages/vuetify/src/components/VList/VList.sass
+++ b/packages/vuetify/src/components/VList/VList.sass
@@ -11,6 +11,7 @@
   @include tools.elevation($list-elevation)
   @include tools.position($list-positions)
   @include tools.rounded($list-border-radius)
+  @include tools.theme($list-theme...)
 
   &--disabled
     pointer-events: none
