--- a/packages/vuetify/src/components/VFileInput/VFileInput.sass
+++ b/packages/vuetify/src/components/VFileInput/VFileInput.sass
@@ -35,12 +35,12 @@
   .v-file-input__clearable
     opacity: 0
 
-  &.v-input--dirty
+  &.v-input--active
     .v-input__control:hover
       .v-file-input__clearable
         opacity: 1
 
-  &.v-input--focused.v-input--dirty
+  &.v-input--focused.v-input--active
     .v-file-input__clearable
       opacity: 1
 
