--- a/packages/vuetify/src/components/VTooltip/_variables.scss
+++ b/packages/vuetify/src/components/VTooltip/_variables.scss
@@ -1,7 +1,7 @@
 @use '../../styles/settings';
 
-$tooltip-background-color: rgba(var(--v-theme-on-surface), 0.5) !default;
-$tooltip-text-color: rgb(var(--v-theme-surface)) !default;
+$tooltip-background-color: rgba(var(--v-theme-surface-variant), .7) !default;
+$tooltip-text-color: rgb(var(--v-theme-on-surface-variant)) !default;
 $tooltip-border-radius: settings.$border-radius-root !default;
 $tooltip-font-size: .875rem !default;
 $tooltip-line-height: 1.6 !default;
