--- a/packages/vuetify/src/components/VSlider/_variables.scss
+++ b/packages/vuetify/src/components/VSlider/_variables.scss
@@ -1,26 +1,30 @@
-@import '../../styles/styles.sass';
+@use '../../styles/settings';
+@use '../../styles/tools';
 
-$chip-group-no-color-opacity: .22 !default;
-$chip-group-opacity: .32 !default;
 $slider-horizontal-left: 8px !default;
 $slider-horizontal-min-height: 32px !default;
 $slider-horizontal-right: 8px !default;
 $slider-label-margin-end: 12px !default;
 $slider-label-margin-start: 12px !default;
 $slider-state-track-background-opacity: 0.4 !default;
-$slider-thumb-before-opacity: 0.3 !default;
+$slider-thumb-hover-opacity: var(--v-hover-opacity) !default;
+$slider-thumb-focus-opacity: var(--v-focus-opacity) !default;
+$slider-thumb-pressed-opacity: var(--v-pressed-opacity) !default;
 $slider-thumb-border-radius: 50% !default;
 $slider-thumb-focused-size-increase: 24px !default;
-$slider-thumb-label-font-size: map-deep-get($typography, 'caption', 'size') !default;
-$slider-thumb-label-height: 32px !default;
-$slider-thumb-label-transition: .3s map-get($transition, 'fast-in-fast-out') !default;
-$slider-thumb-label-width: 32px !default;
-$slider-thumb-size: 12px !default;
+$slider-thumb-label-font-size: tools.map-deep-get(settings.$typography, 'caption', 'size') !default;
+$slider-thumb-label-border-radius: 4px !default;
+$slider-thumb-label-height: 25px !default;
+$slider-thumb-label-width: 35px !default;
+$slider-thumb-label-wedge-size: 6px !default;
+$slider-thumb-label-offset: calc(var(--v-slider-thumb-size) / 2) !default;
+$slider-thumb-label-transition: .2s settings.$accelerated-easing !default;
 $slider-thumb-touch-size: 42px !default;
-$slider-tick-border-radius: 0 !default;
-$slider-track-border-radius: 0 !default;
+$slider-tick-border-radius: 2px !default;
+$slider-tick-label-margin-bottom: 25px !default;
+$slider-track-border-radius: 6px !default;
 $slider-track-width: 2px !default;
-$slider-transition: .3s map-get($transition, 'swing') !default;
+$slider-transition: .3s cubic-bezier(0.25, 0.8, 0.5, 1) !default;
 $slider-vertical-margin-bottom: 12px !default;
 $slider-vertical-margin-top: 12px !default;
-$slider-vertical-min-height: 150px !default;
+$slider-vertical-min-height: 300px !default;
